container/docker/apps/06.fibonacci-k8s/k8s/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: worker-deployment

# Worker Pod do not need to be accessible by any other pod, therefore, it doesn't need a clusterIP

spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker

  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: hvitoi/fibo-worker
