container/docker/apps/06.fibonacci-k8s/k8s/redis-service-clusterip.yml
apiVersion: v1
kind: Service

metadata:
  name: redis-service-clusterip

spec:
  type: ClusterIP
  selector:
    component: redis
  ports:
    - port: 6379
      targetPort: 6379
