container/docker/apps/06.fibonacci-k8s/k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress

metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    # Configures how the copy of nginx behaves
    # Everything that gets routed is writed in the form /$1 ($1 is to be specified as ?(.*))
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - http:
        paths:

            # Requests coming to /    
          - path: /?(.*)

            # Go to ...
            backend:
              serviceName: web-service-clusterip
              servicePort: 3000

          # Requests coming to /api
          - path: /api/?(.*)

            # Go to ...
            backend:
              serviceName: api-service-clusterip
              servicePort: 5000
